<resources>
    <string name="reloading_driver">Getting nearest drivers...</string>
    <string name="app_name">LottoStars</string>
    <string name="title_activity_maps">Gamesy</string>
    <string name="title_activity_community_talk">Community Talk</string>
    <string name="driver_coming">Driver Coming </string>
    <string name="title_activity_join_ride">Join Ride</string>
    <string name="title_activity_request_ride">Request Ride</string>
    <string name="title_activity_received_request">Your Request</string>
    <string name="facebook_app_id">1135108419889587</string>
    <string name="driver_search_title">Getting nearest drivers...</string>
    <string name="no_driver">No driver found in your nearest location</string>
    <string name="driver_busy">All our drivers are busy</string>
    <string name="driver_busy_try_later">All our drivers are busy, try later</string>
    <string name="error_msg">No shared rides available in your nearest locations\nMake a ride request</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_view_requested_rides">ViewRequestedRides</string>
    <string name="gcm_sender_id">135792131334</string>
    <string name="request_failed">Unable to complete your request. Try again</string>
    <string name="distance_time">Getting distance and time of arrival</string>
    <string name="distance_time_error">Unable to get Distance and time</string>
    <string name="gcm_server_api_key">AIzaSyCx4az_sTp1QJ_oC4nQE6XJVfR6rnJeRfM</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="welcome">Welcome to </string>
    <string name="seat_complete">All seat has been requested. Request new or join another</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="decimal">.00</string>
    <string name="currency">$</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="action_logout">Logout</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid location value used</string>
    <string name="no_address_found">Unable to get your location</string>
    <string name="address_found">address_found</string>
    <string name="no_geocoder_available">no_geocoder_available</string>
    <string name="sign_in_button_title">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="email_hint">Email address</string>
    <string name="full_name">Full Name</string>
    <string name="phone_hint">Phone No</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signing_in">Sign In</string>
    <string name="password_hint">Password</string>
    <string name="create_id">Create Account</string>
    <string name="enter_user_id">Enter email address</string>
    <string name="password">Enter password</string>
    <string name="invalid_userId">Invalid user account</string>
    <string name="error_invalid_password">invalid password</string>
    <string name="internet_connection">No internet connection</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_back">Welcome back </string>
    <string name="phone_required">Phone no. required</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="email">Email address</string>
    <string name="recover_password">Recover Password</string>
    <string name="having_trouble_signing_in">Enter your phone number.</string>
    <string name="credit_card">Credit card</string>
    <string name="history">History</string>
    <string name="add_payment">Payment</string>
    <string name="track_ride">Track Ride</string>
    <string name="username_password">Enter your email address or phone number and password to login.</string>
    <string name="email_phone">Email address</string>
    <string name="retry">Retry later</string>
    <string name="individual">Individual</string>
    <string name="group">Group (4 - 10)</string>
    <string name="type_select_text">Select the number of riders in your group.\n\nYou will be assigned a vehicle based on the number of riders provided.\n\nYou will be prompted to enter the names and phone numbers of each person in the group.\n\nGroup members will be notified of pickup time and location</string>
    <string name="select_seat">Select Seat Capacity</string>
    <string name="pickup_location">Pickup address</string>
    <string name="location_loading">Getting current location...</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="get_distance_time">Getting distance, time and cost...</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="destination_address">Enter destination address</string>
    <string name="pickup_address">Enter pickup address</string>
    <string name="request_sending">Sending request, We will assign a driver to you shortly</string>
    <string name="unable_to_complete_request">Unable to complete request, try later.</string>
    <string name="enter_total_riders">Enter number of people?</string>
    <string name="select_people_number">how many persons?</string>
    <string name="select_type">REQUEST TYPE AND TIME</string>
    <string name="shared">Shared</string>
    <string name="zoom_in">Zoom in to get location</string>
    <string name="business">business</string>
    <string name="title_activity_map_drawer">MapDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="set_pickup_location">Set Pickup Location</string>
    <string name="set_second_pickup_location">Set Second Pickup Location</string>
    <string name="default_time">12MIN</string>
    <string name="enter_pickup_location">ENTER PICKUP LOCATION</string>
    <string name="set_destination">SET DESTINATION</string>
    <string name="fare_estimate">Fare Estimate</string>
    <string name="pickup_location_set">Pickup location set</string>
    <string name="enter_destination_address">Enter destination address</string>
    <string name="destination_address_set">Destination address set</string>
    <string name="second_pickup_location">2nd Pickup Location - Optional</string>
    <string name="cash">Cash</string>
    <string name="enter_card">Add your card for a seamless ride. Your card will be charged N10 for verification.</string>
    <string name="card_saved">Card successfully verified</string>
    <string name="promo_code">PROMO CODE</string>
    <string name="save">Save Promo Code</string>
    <string name="promo_code_saved">Promo code saved</string>
    <string name="rate_driver">Rate Driver</string>
    <string name="get_word">To ensure quality of service, please rate the driver.</string>
    <string name="enter_promo_code">Enter your promo code and it will be applied to your next ride.</string>
    <string name="apply">Apply Code Now</string>
    <string name="no_history_found">No history found</string>
    <string name="pending_request">Pending request</string>
    <string name="completed_request">Completed</string>
    <string name="returned_request">Canceled</string>
    <string name="ride_request">Ride request made by</string>
    <string name="payment_card">Payment Card</string>
    <string name="facebook_reg">Complete with facebook</string>
    <string name="enter_phone_no">Enter your phone number for verification.</string>
    <string name="confirm_phone">Confirm Phone No.</string>
    <string name="phone_no">Phone no.</string>
    <string name="country_code">+</string>
    <string name="app_name_welcome">Welcome to Gamesy</string>
    <string name="title">Gamesy</string>
    <string name="login_to_your_account">Enter your email address and password</string>
    <string name="terms_condition_title">By creating an account, you agree to our</string>
    <string name="terms_condition">Terms and Conditions</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="appreciation">Thanks for your patronage.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_title">Enter the OTP sent to your phone?</string>
    <string name="otp">0 0 0 0 0</string>
    <string name="otp_resend">Did not received OTP?</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="invalid_phone_no">Invalid phone number.</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="uploaded">uploaded</string>
    <string name="reset_password">Reset Password</string>
    <string name="recover_account">Recover Account</string>
    <string name="less_than"><![CDATA[<]]></string>
    <string name="greater_tahn"><![CDATA[>]]></string>
    <string name="cost">Cost</string>
    <string name="estimated">Estimated</string>
    <string name="name">Name</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="destination_address_title">Destination Address</string>
    <string name="pickup_address_title">Pickup Address</string>
    <string name="new_password">Enter new password</string>
    <string name="new_password_input">New password</string>
    <string name="enter_password">Enter password</string>
    <string name="reenter_password">Repeat password</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="password_redirect">.You will be redirected in 5secs.</string>
    <string name="app_title">movement made easier.</string>
    <string name="home_address">Home address</string>
    <string name="amount">Amount</string>
    <string name="addCredit">Add credit</string>
    <string name="enter_credit_amount">Enter credit amount</string>
</resources>