<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="@dimen/activity_horizontal_margin"
android:background="@color/primaryDark"
tools:context="com.example.mygame.mygame.auth.VerifyOtpActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/phone_icon"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"/>
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp"
        android:textAllCaps="false"
        android:typeface="normal"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_title"
        android:textAllCaps="false"
        android:typeface="normal"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:paddingLeft="5dp"
        android:gravity="center"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/verify_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp"
        android:textSize="30sp"
        android:gravity="center"
        android:typeface="normal"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/textBoxTextColor"
        android:textColorHint="@color/textBoxTextHintCoor"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_border"
        />
    <Button
        android:id="@+id/confirm_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_otp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:paddingLeft="20dp"
        android:textStyle="bold"
        android:paddingRight="20dp"
        android:typeface="normal"
        android:layout_weight="1"
        android:textAllCaps="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@drawable/background_colorprimary"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/resend_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:typeface="normal"
        android:layout_weight="1"
        android:textAllCaps="true"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/background_black"
        android:layout_marginTop="10dp"/>



</LinearLayout>

</RelativeLayout>
