<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="10dp"
android:background="@color/colorPrimary"
tools:context="com.example.mygame.mygame.auth.CreateAccount">
<ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CREATE ACCOUNT"
            android:typeface="normal"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"/>
        <View
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/title_gray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please enter your profile data."
            android:typeface="normal"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textSize="20sp"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:typeface="normal"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/title_gray"
            />

        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="20sp"
            android:gravity="center"
            android:typeface="normal"
            android:padding="10dp"
            android:background="@drawable/button_border"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/title_gray"
            />

        <EditText
            android:id="@+id/home_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/home_address"
            android:textSize="20sp"
            android:gravity="center"
            android:typeface="normal"
            android:padding="10dp"
            android:background="@drawable/button_border"
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/title_gray"
            />



        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textSize="20sp"
            android:gravity="center"
            android:inputType="textPassword"
            android:typeface="normal"
            android:background="@drawable/button_border"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/title_gray"

            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_condition_title"
                android:typeface="normal"
                android:textAllCaps="false"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/terms_conditions"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/terms_condition"
                android:typeface="normal"
                android:textAllCaps="false"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                />
        </LinearLayout>
        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_now"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/background_cornered_green"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:text="@string/sign_in_button_title"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>
</ScrollView>




</RelativeLayout>
