<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="20dp"
tools:context="com.example.mygame.mygame.MainActivity"
android:background="@color/primaryDark">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:id="@+id/linearLayout6">

    <!--<ImageView-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="80dp"-->
        <!--android:src="@drawable/lotto_stars"-->
        <!--android:layout_gravity="center"/>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:typeface="normal"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"/>

</LinearLayout>

 <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentBottom="true"
    android:orientation="vertical"
    android:layout_marginBottom="80dp">

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:background="@drawable/background_black"
        android:gravity="center"
        android:text="@string/sign_in_button_title"
        android:textStyle="bold"
        android:typeface="normal"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_colorprimary"
        android:gravity="center"
        android:typeface="normal"
        android:text="@string/create_id"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>

</RelativeLayout>