<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="10dp"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context="com.example.mygame.mygame.auth.LoginActivity"
tools:showIn="@layout/activity_login">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="false"
        android:alpha="0.1"
        android:background="@drawable/background_image" />

<ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:id="@+id/linearLayout6">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/background_image"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:typeface="normal"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/primaryDark"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:max="100"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:visibility="gone"
            android:backgroundTint="@color/primaryDark"
            android:indeterminateTint="@color/colorPrimary"
            android:layout_marginTop="-7dp"
            android:layout_marginBottom="10dp"/>
        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email_hint"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:typeface="normal"
            android:textColor="@color/textBoxTextColor"
            android:textColorHint="@color/title_gray" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password_hint"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:gravity="center"
            android:background="@drawable/button_border"
            android:typeface="normal"
            android:textColor="@color/textBoxTextColor"
            android:textColorHint="@color/title_gray" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button_title"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/primaryDark"
            android:background="@drawable/background_colorprimary" />
        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_black"
            android:gravity="center"
            android:text="@string/create_id"
            android:textAllCaps="true"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:textSize="20sp"
                android:textColor="@color/primaryDark"
                android:typeface="normal"
                android:textAllCaps="false"
                android:gravity="center"
                android:background="@color/transparent"
                android:layout_margin="5dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</RelativeLayout>