<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="false"
        android:alpha="0.1"
        android:background="@drawable/background_image" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_centerInParent="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="start|center"
                        android:gravity="start|center"
                        android:layout_weight="1"
                        android:paddingLeft="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:textStyle="bold"
                        android:textColor="@color/primaryDark"
                        android:textSize="15sp"
                        android:text="@string/enter_credit_amount" />

            <EditText
                android:id="@+id/credit_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:textColorHint="@color/title_gray"
                android:layout_gravity="start|center"
                android:gravity="center|start"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="numberDecimal"/>

                <Button
                    android:id="@+id/addCredit"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/addCredit"
                    android:background="@drawable/background_colorprimary"
                    android:textStyle="normal"
                    android:layout_weight="1"
                    android:textColor="@color/primaryDark"
                    android:textSize="17sp" />
            </LinearLayout>


</RelativeLayout>